--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-css":"tailwindcss build src/App.css -o public/styles.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
